--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Hamilton
-description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Shangzhi Huang
+description: nil
+author: Hari Haran
 avatar: /logo.png
-email: ngzhio@gmail.com
+email: rhariharan909@gmail.com
 
 plugins:
   - jekyll-seo-tag
@@ -30,14 +30,13 @@ exclude:
 # Jekyll SEO Tag (Optional)
 # =========================
 twitter:
-  username: ngzhio
+  username: Drint
   card: summary
 logo: logo.png
 social:
-  name: Shangzhi Huang
+  name: Hari Haran
   links:
     - https://twitter.com/ngzhio
     - https://www.facebook.com/ngzhio
     - https://github.com/ngzhio
-google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
 lang: en
