--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,14 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-NL"
-title                    : "Hari Haran / .Dot"
+locale                   : "en-US"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Hari Haran"
-description              : &description "I am master student in Robotics, I am Passionate about making robots more specifically, giving the intelligence to the non-living obect to move"
-url                      : "https://hariharan382.github.io/drint.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Your Name"
+description              : &description "personal description"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "hariharan382/drint.github.io"
-
-
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -24,23 +22,111 @@ repository               : "hariharan382/drint.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Drint"  
+  name             : "Your Sidebar Name"
+  pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Netherlands"
-  University         : "University of Twente"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "rhariharan909@gmail.com" 
+  email            : "none@example.org" 
 
- 
+  # Academic websites
+  arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  impactstory      : # URL
+  orcid            : "http://orcid.org/yourorcidurl"
+  semantic         : # URL
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : # URL
+
   # Repositories and software development
-  github           : "hariharan382"
-  Huggingface      : "Drint"
-  
+  bitbucket        : # Username - Update with your username on the site
+  codepen          : # Username
+  dribbble         : # Username
+  github           : "academicpages"
+  kaggle           : # Username  
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  linkedin         : "www.linkedin.com/in/hari-haran-379579181"
-  mastodon         : "Drint"
-  soundcloud       : "https://soundcloud.com/drint382?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"
+  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  facebook         : # Username
+  flickr           : # Username
+  foursquare       : # Username
+  goodreads        : # Username
+  google_plus      : # Username
+  keybase          : # Username
+  instagram        : # Username
+  lastfm           : # Username
+  linkedin         : # Username
+  mastodon         : # URL
+  medium           : # URL
+  pinterest        : # Username
+  soundcloud       : # Username
+  steam            : # Username
+  telegram         : # URL
+  tumblr           : # Username
+  twitter          : # Username for X / Twitter
+  vine             : # Username
+  weibo            : # Username
+  wikipedia        : # Username
+  xing             : # Username
+  youtube          : # Username
+  zhihu            : # URL
+
+# Publication Category - The following the list of publication categories and their headings
+publication_category:
+  books:
+    title: 'Books'
+  manuscripts:
+    title: 'Journal Articles'    
+  conferences:
+    title: 'Conference Papers'
+
+
+
+# # Welcome to Jekyll!
+# #
+# # This config file is meant for settings that affect your entire site, values
+# # which you are expected to set up once and rarely need to edit after that.
+# # For technical reasons, this file is *NOT* reloaded automatically when you use
+# # `jekyll serve -l -H localhost`. If you change this file, please restart the 
+# # server process.
+
+# # Basic Site Settings
+# locale                   : "en-NL"
+# title                    : "Hari Haran /Dot"
+# title_separator          : "-"
+# name                     : &name "Hari Haran"
+# description              : &description "Personal webpage"
+# url                      : "https://hariharan382.github.io/drint.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# baseurl                  : "" # the subpath of your site, e.g. "/blog"
+# repository               : "hariharan382/drint.github.io"
+
+
+
+# # Site Author - The following control what appear as part of the author content on the side bar.
+# #               If a field is blank the icon and link will not appear, otherwise it will be shown.
+# #               Additional customization can be done by editing /_includes/author-profile.html
+# author:
+#   # Biographic information
+#   avatar           : "profile.png"
+#   name             : "Drint"  
+#   bio              : "Short biography for the left-hand sidebar"
+#   location         : "Netherlands"
+#   University         : "University of Twente"
+#   uri              : # URL
+#   email            : "rhariharan909@gmail.com" 
+
+ 
+#   # Repositories and software development
+#   github           : "hariharan382"
+#   Huggingface      : "Drint"
+  
+
+#   # Social media
+#   linkedin         : "www.linkedin.com/in/hari-haran-379579181"
+#   mastodon         : "Drint"
+#   soundcloud       : "https://soundcloud.com/drint382?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"
 
 
 
