--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-NL"
-title                    : "Hari Haran /Dot -"
+title                    : "Hari Haran /Dot-----------------"
 title_separator          : "-"
 name                     : &name "Hari Haran"
 description              : &description "Personal webpage"
